design contact button style

--- a/index.html
+++ b/index.html
@@ -1,29 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style/style.css" />
     <title>Agenda</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="header">
-        <h1>Agenda</h1>
+      <h1>Agenda</h1>
     </div>
     <div class="container">
-        <div class="contact-container">
-            <span>+34 #########</span>
-            <div class="button-container">
-                <div class="button">X</div>
-            </div>
+      <div class="contact-container open">
+        <div class="contact">
+          <span>Name</span>
+          <div class="button-container">
+            <div class="button">X</div>
+          </div>
         </div>
-        <div class="contact-container">
-            <span>+34 #########</span>
-            <div class="button-container">
-                <div class="button">X</div>
-            </div>
+
+        <div class="contact-info">
+          <span>+34 #########</span>
         </div>
+      </div>
+
+      <div class="contact">
+        <span>Name</span>
+        <div class="button-container">
+          <div class="button">X</div>
+        </div>
+      </div>
+
+      <div class="contact">
+        <span>Name</span>
+        <div class="button-container">
+          <div class="button">X</div>
+        </div>
+      </div>
     </div>
-</body>
+  </body>
 </html>
