--- a/index.html
+++ b/index.html
@@ -5,39 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style/style.css" />
+    <script defer src="script/main.js"></script>
     <title>Agenda</title>
   </head>
   <body>
     <div class="header">
       <h1>Agenda</h1>
     </div>
-    <div class="container">
-      <div class="contact-container open">
-        <div class="contact">
-          <span>Name</span>
-          <div class="button-container">
-            <div class="button">X</div>
-          </div>
-        </div>
+    <div class="container"></div>
+      <div id="app">
 
-        <div class="contact-info">
-          <span>+34 #########</span>
-        </div>
-      </div>
+    </div>
+    
 
-      <div class="contact">
-        <span>Name</span>
-        <div class="button-container">
-          <div class="button">X</div>
-        </div>
-      </div>
-
-      <div class="contact">
-        <span>Name</span>
-        <div class="button-container">
-          <div class="button">X</div>
-        </div>
-      </div>
     </div>
   </body>
 </html>
